--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,14 @@ header a {
   margin-left: 20px;
 }
 
+loading {
+  padding: 30px 150px;
+  background-color: cornsilk;
+  color: crimson;
+  font-size: 24px;
+  font-weight: 700;
+}
+
 .container {
   background-color: #333;
   padding: 50px;
