--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,7 +16,7 @@ header a {
   margin-left: 20px;
 }
 
-loading {
+.loading {
   padding: 30px 150px;
   background-color: cornsilk;
   color: crimson;
