--- a/app/globals.css
+++ b/app/globals.css
@@ -1,32 +1,34 @@
-body {
-  background-color: #5a5a5a;
-  color: #badd52;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+main {
+  margin: 10px 10px;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  background-color: black;
-  border-bottom: 2px solid #ff5c5c;
-  padding: 20px 50px
-}
-
-header a {
-  color: aquamarine;
-  margin-left: 20px;
-}
-
-.container {
-  background-color: #333;
-  padding: 50px;
-}
-
-.post {
-  font-size: 12px;
-  background-color: antiquewhite;
-  color: black;
-  width: 40%;
-  margin: 5px;
-  padding: 10px;
+button {
+  border: 2px solid black;
   border-radius: 4px;
+  margin-top: 5px;
+  padding: 5px;
+  width: 150px;
+}
+button:not(:active):hover {
+  border: 2px solid red;
+  background-color: beige;
+}
+button:active {
+  background-color: #adad21;
+  box-shadow: 2px 2px 1px 0px #000000bf;
+}
+
+span {
+  font-size: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.link {
+  color: #0101ff;
+  text-decoration: underline;
+  margin: 10px 0;
 }
