--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,23 @@ loading {
   padding: 10px;
   border-radius: 4px;
 }
+
+.comment-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 500px;
+}
+
+input[type="text"] {
+  width: 200px;
+  height: 20px;
+  padding: 5px;
+  font-size: 16px;
+  background-color: #badd52;
+  border-radius: 5px;
+}
+input[type="text"]:focus {
+  background-color: #FFFFFF;
+  outline: 2px solid #badd52;
+}
