--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,13 +43,14 @@ loading {
 .comment-header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  width: 500px;
+  justify-content: flex-start;
+  width: 550px;
 }
 
 input[type="text"] {
   width: 200px;
   height: 20px;
+  margin: 0 20px;
   padding: 5px;
   font-size: 16px;
   background-color: #badd52;
